starter-repos/anthos-config-management/templates/online-boutique/network-policy.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-online-boutique-frontend
spec:
  podSelector:
    # Apply policy to all pods in this namespace.
    matchLabels: {}
  ingress:
  - from:
    # Allow traffic between all pods in this namespace.
    - podSelector: {}
  - from:
    # Allow traffic from online-boutique-frontend namespace
    - namespaceSelector:
        matchLabels:
          app: online-boutique-frontend
